apps/jellyseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: jellyseerr
  labels:
    app: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: seerr
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - name: seerr-config
              mountPath: /app/config
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
