apps/jellyseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: jellyseerr
  labels:
    app: seerr
spec:
  selector:
    app: seerr
  ports:
    - name: seerr
      protocol: TCP
      port: 5055
      targetPort: seerr
  type: ClusterIP
