apps/jellyseerr/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seerr
  namespace: jellyseerr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`seerr.licht`)
      services:
        - name: seerr
          port: 5055
  tls:
    secretName: seerr-tls
